# glportal-data

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.json  main.cfg  private.cfg
audio/music/: README.org  track2-readme.txt
audio/sfx/character/: README.org
fonts/: Pacaya.txt
gui/: DebugFont.spacing
maps/: beam.xml  beam1.xml  beam2.xml  concept1.xml  dev.xml  divided-room.xml  maplist  n1.xml  n2.xml  n3.xml  n4.xml  obstacle.xml  old2.xml  old3.xml  test.xml  testWinTrigger.xml  tower.xml
meshes/: LICENSE-HumanToken.md
screens/: end.xml  hud.xml  pause.xml  test.xml  title.xml
shaders/: 2d.frag  2d.vert  ambient.frag  color.frag  diffuse.frag  diffuse.vert  metal.frag  red.frag  simplexTime.frag  text.frag  unshaded.frag  whitefill.frag
shaders/legacy/: 2d.frag  2d.vert  color.frag  diffuse.frag  diffuse.vert  simplexTime.frag  text.frag  unshaded.frag  whitefill.frag
textures/boxes/: dev00.gmd
textures/brick/: LICENSE-brick.md  brick.gmd  brick.rmdx
textures/concrete/: concrete.rmdx  wall00.gmd  wall00.rmdx
textures/crate/: LICENSE.md  crate.gmd
textures/dev/: floor00.gmd  wall00.rmdx  wall_1x1_00.rmdx  water00.gmd
textures/dev/colors/: white.gmd
textures/door/: door.gmd  door1.rmdx
textures/fluid/: acid00.gmd  acid00.rmdx
textures/metal/: tiles00x3.gmd
textures/models/: HumanToken.gmd  LICENSE-barrel.md  LICENSE-tank.md  barrel.gmd  light-fixture.rmdx  paper1.rmdx  paper2.gmd  sign1.gmd  sign2.gmd  tank.gmd
textures/wood/: LICENSE-wood.md  wood.gmd
tools/: linkData
